# Fasthub

./: .gitignore  package-lock.json  readme.md
Backend/: .replit  ecommerce.db  pyproject.toml  replit.md
Backend/app/: __init__.py  config.py  main.py  migrate_product_slugs.py  seed.py  unseed.py
Backend/app/models/: __init__.py  customer.py  order.py  payment.py  product.py  repair.py  settings.py
Backend/app/routes/: __init__.py  analytics.py  auth.py  customers.py  orders.py  payments.py  products.py  repairs.py  settings.py
Backend/app/schemas/: __init__.py  customer.py  order.py  payment.py  product.py  repair.py  settings.py
Backend/app/services/: __init__.py  analytics.py  auth.py  customer.py  mpesa.py  order.py  payment.py  product.py  repair.py
Backend/app/utils/: cloudinary_utils.py  security.py
Backend/attached_assets/: Pasted-Create-a-complete-FastAPI-backend-for-a-single-store-e-commerce-application-with-full-support-for-pr-1759146673291_1759146673293.txt
Frontend/: package-lock.json  package.json
Frontend/app/: layout.tsx
Frontend/app/checkout/: page.tsx
Frontend/app/orders/: page.tsx
Frontend/app/products/: page.tsx
Frontend/components/admin/: AddProductModal.tsx  AnalyticsDashboard.tsx  CustomersTable.tsx  DashboardStats.tsx  OrdersTable.tsx  ProductsTable.tsx  RecentOrders.tsx  RepairRequestsTable.tsx  SalesChart.tsx  SettingsPanel.tsx
Frontend/components/auth/: AuthModal.tsx
Frontend/contexts/: AuthContext.tsx
Frontend/lib/: api.d.ts  api.ts  mockData.ts
Frontend/lib/api/: analytics.ts  (+8 more)
Frontend/types/: product.ts
(+12 files in other folders)
